<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide_url">https://github.com/bumptech/glide</string>
    <string name="glide_description">Glide - Image loading library by bumptech</string>
    <string name="retrofit_url">https://github.com/square/retrofit</string>
    <string name="retrofit_description">Retrofit - Type-safe HTTP client for Android and Java by Square, inc</string>
    <string name="udacity_url">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter</string>
    <string name="udacity_description">Load app - current repository by udacity</string>

    <string name="channel_id">channelId</string>
    <string name="channel_name">Load app</string>
    
    <string name="details_uri_label">Downloaded from:</string>
    <string name="details_status_label">Status</string>
    <string name="details_button">Go back</string>
</resources>
