<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.details.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <TextView
        android:id="@+id/detail_filename_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_uri_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail_filename_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/detail_constraint_center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Look at me!" />

    <TextView
        android:id="@+id/detail_status_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_status_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_filename_content" />

    <TextView
        android:id="@+id/detail_status_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/detail_constraint_center"
        app:layout_constraintTop_toBottomOf="@id/detail_filename_content"
        tools:text="Look at me!" />

    <androidx.constraintlayout.widget.Constraints
        android:id="@+id/detail_constraint_center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/detail_button"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:text="@string/details_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>